# dingtalk_mcp_server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/dingtalk/: contacts.py  dingtalk_server.py  im.py
tests/: contacts_test.py
